--- a/index.html
+++ b/index.html
@@ -1,124 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Afrilink Agency connects Kenyan talent with global jobs in Canada, Qatar, and more. Apply now!">
-  <title>Afrilink Agency – Kenya to the world, one career at a time</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>AOS.init({ duration: 800, once: true });</script>
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "JobPosting",
-    "title": "Caregivers – Canada",
-    "description": "Exciting caregiver roles with verified employers in Canada."
-  }
-  </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Afrilink Agency - Unlocking Your Future Abroad</title>
+    <meta name="description" content="Afrilink Agency helps Kenyans secure jobs abroad in Canada, UK, Dubai, Qatar, and Saudi Arabia. Job placements, visa assistance, and more.">
+    <meta name="keywords" content="jobs abroad, Kenya jobs, visa assistance, Afrilink Agency">
+    <meta property="og:title" content="Afrilink Agency - Unlocking Your Future Abroad">
+    <meta property="og:description" content="Empowering Kenyans to work abroad.">
+    <meta property="og:image" content="images/afrilinklogo.jpg">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- ================= HEADER ================= -->
-  <header>
-    <div class="container">
-      <a href="index.html"><img src="images/afrilinklogo.jpg" alt="Afrilink Agency Logo" style="height:50px;" loading="lazy"></a>
-      <div class="menu-toggle">☰</div>
-      <nav>
-        <a href="index.html" class="active">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="jobs.html">Jobs</a>
-        <a href="contact.html" class="cta-btn">Contact Us</a>
-      </nav>
-    </div>
-  </header>
+    <header>
+        <nav class="container">
+            <div class="logo">
+                <img src="images/afrilinklogo.jpg" alt="Afrilink Agency Logo">
+            </div>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="jobs.html">Jobs</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <!-- ================= HERO SECTION ================= -->
-  <section class="hero">
-    <img src="images/jobhero1.jpg" alt="Caregiver working in Canada" loading="lazy">
-    <img src="images/jobhero2.jpg" alt="Global career paths for Kenyan talent" loading="lazy">
-    <img src="images/jobhero3.jpg" alt="Work abroad with Afrilink Agency" loading="lazy">
-    <div class="hero-text" data-aos="fade-up">
-      <h1>Kenya to the world, one career at a time</h1>
-      <p>Connecting Kenyan Talent with Global Opportunities</p>
-      <div class="hero-ctas" data-aos="zoom-in" data-aos-delay="200">
-        <a href="jobs.html" class="cta-btn">Explore Jobs</a>
-        <button class="apply-btn cta-btn" data-job="General Application">Apply Now</button>
-      </div>
-    </div>
-  </section>
-
-  <!-- ================= ABOUT PREVIEW ================= -->
-  <section data-aos="fade-up">
-    <div class="container">
-      <h2>About Afrilink Agency</h2>
-      <p>
-        Afrilink Agency is dedicated to connecting hardworking Kenyans with verified overseas jobs. 
-        We ensure safe, legal, and transparent recruitment, guiding you from application to arrival.
-      </p>
-      <p style="text-align:center; margin-top:20px;">
-        <a href="about.html" class="cta-btn">Learn More</a>
-      </p>
-    </div>
-  </section>
-
-  <!-- ================= JOB PREVIEW ================= -->
-  <section data-aos="fade-up">
-    <div class="container">
-      <h2>Featured Job Destinations</h2>
-      <div class="jobs-grid">
-        <div class="job-card" data-aos="fade-up" data-aos-delay="100">
-          <img src="images/jobcanada.jpg" alt="Caregiver job in Canada" loading="lazy">
-          <div class="content">
-            <h3 data-aos="fade-right" data-aos-delay="200">Caregivers – Canada</h3>
-            <p data-aos="fade-right" data-aos-delay="300">Exciting caregiver roles with verified employers.</p>
-            <button class="apply-btn" data-job="Caregivers – Canada" data-aos="zoom-in" data-aos-delay="400">Apply Now</button>
-          </div>
+    <section class="hero">
+        <div class="slider">
+            <div class="slide"></div>
+            <div class="slide"></div>
+            <div class="slide"></div>
         </div>
-        <div class="job-card" data-aos="fade-up" data-aos-delay="200">
-          <img src="images/jobqatar.jpg" alt="Hospitality job in Qatar" loading="lazy">
-          <div class="content">
-            <h3 data-aos="fade-right" data-aos-delay="300">Hospitality Staff – Qatar</h3>
-            <p data-aos="fade-right" data-aos-delay="400">Join luxury hotels and restaurants in Doha.</p>
-            <button class="apply-btn" data-job="Hospitality Staff – Qatar" data-aos="zoom-in" data-aos-delay="500">Apply Now</button>
-          </div>
+        <div class="hero-content container" data-aos="fade-down">
+            <h1>Afrilink Agency - Unlocking Your Future Abroad</h1>
+            <p>Empowering Kenyans with opportunities in top global destinations.</p>
+            <a href="jobs.html" class="btn">Explore Jobs</a>
         </div>
-        <div class="job-card" data-aos="fade-up" data-aos-delay="300">
-          <img src="images/jobdubai.jpg" alt="Construction job in Dubai" loading="lazy">
-          <div class="content">
-            <h3 data-aos="fade-right" data-aos-delay="400">Construction Workers – Dubai</h3>
-            <p data-aos="fade-right" data-aos-delay="500">Build your career in Dubai’s fast-growing industry.</p>
-            <button class="apply-btn" data-job="Construction Workers – Dubai" data-aos="zoom-in" data-aos-delay="600">Apply Now</button>
-          </div>
-        </div>
-      </div>
-      <p style="text-align:center; margin-top:20px;">
-        <a href="jobs.html" class="cta-btn">View All Jobs</a>
-      </p>
-    </div>
-  </section>
+    </section>
 
-  <!-- ================= TESTIMONIALS ================= -->
-  <section data-aos="fade-up">
-    <div class="container">
-      <h2>Success Stories</h2>
-      <div class="jobs-grid">
-        <div class="service-card" data-aos="zoom-in" data-aos-delay="100">
-          <p>"Afrilink got me a caregiver job in Canada!" – Jane, Nairobi</p>
+    <section class="stats" data-aos="fade-up">
+        <div class="container">
+            <h2>Our Impact</h2>
+            <div class="stats-grid">
+                <div class="stat">
+                    <h3>500+</h3>
+                    <p>Successful Placements</p>
+                </div>
+                <div class="stat">
+                    <h3>5</h3>
+                    <p>Countries Served</p>
+                </div>
+                <div class="stat">
+                    <h3>2020</h3>
+                    <p>Founded</p>
+                </div>
+            </div>
         </div>
-        <div class="service-card" data-aos="zoom-in" data-aos-delay="200">
-          <p>"Smooth visa process for Qatar hospitality!" – Peter, Mombasa</p>
+    </section>
+
+    <section data-aos="fade-up">
+        <div class="container">
+            <h2>Quick Services Overview</h2>
+            <div class="services-grid">
+                <div class="service-card">
+                    <img src="images/jobservice.jpg" alt="Job Placement Service" loading="lazy">
+                    <h3>Job Placements</h3>
+                    <p>Match you with opportunities abroad.</p>
+                    <a href="services.html" class="btn">Learn More</a>
+                </div>
+                <!-- Add 1-2 more teaser cards if desired -->
+            </div>
         </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- ================= FOOTER ================= -->
-  <footer>
-    <p>&copy; 2025 Afrilink Agency. Kenya to the world, one career at a time.</p>
-  </footer>
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Afrilink Agency. All rights reserved. | <a href="privacy.html">Privacy</a> | <a href="terms.html">Terms</a></p>
+            <p>Contact: +254707614590 | <a href="https://wa.me/254707614590">WhatsApp</a></p>
+        </div>
+    </footer>
 
-  <script src="script.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
