--- a/about.html
+++ b/about.html
@@ -1,75 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Learn about Afrilink Agency, a trusted Kenyan recruitment agency connecting talent with global job opportunities.">
-  <title>About – Afrilink Agency</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>AOS.init({ duration: 800, once: true });</script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Afrilink Agency</title>
+    <meta name="description" content="Learn about Afrilink Agency, founded in 2020 to help Kenyans find jobs abroad. Our story, mission, and impact.">
+    <meta name="keywords" content="about Afrilink, Kenya abroad jobs, agency story">
+    <meta property="og:title" content="About Afrilink Agency">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- ================= HEADER ================= -->
-  <header>
-    <div class="container">
-      <a href="index.html"><img src="images/afrilinklogo.jpg" alt="Afrilink Agency Logo" style="height:50px;" loading="lazy"></a>
-      <div class="menu-toggle">☰</div>
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html" class="active">About</a>
-        <a href="services.html">Services</a>
-        <a href="jobs.html">Jobs</a>
-        <a href="contact.html" class="cta-btn">Contact Us</a>
-      </nav>
-    </div>
-  </header>
+    <header>
+        <nav class="container">
+            <div class="logo">
+                <img src="images/afrilinklogo.jpg" alt="Afrilink Agency Logo" loading="lazy">
+            </div>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="jobs.html">Jobs</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <!-- ================= HERO ================= -->
-  <section class="page-hero" style="background-image:url('images/jobabout.jpg');">
-    <div class="hero-overlay" data-aos="fade-up">
-      <h1 data-aos="fade-up" data-aos-delay="200">About Afrilink Agency</h1>
-      <p data-aos="fade-up" data-aos-delay="400">Kenya to the world, one career at a time</p>
-      <a href="jobs.html" class="cta-btn" data-aos="zoom-in" data-aos-delay="600">View Jobs</a>
-    </div>
-  </section>
+    <section data-aos="fade-up">
+        <div class="container">
+            <h2>Our Story</h2>
+            <img src="images/jobabout.jpg" alt="Afrilink Agency Team" loading="lazy" style="width:100%; border-radius:10px; margin-bottom:2rem;">
+            <p>Founded in 2020 amid the global challenges of the pandemic, Afrilink Agency was born from a simple yet powerful vision: to bridge the gap between talented Kenyans and international job opportunities. Our founder, a Kenyan entrepreneur with firsthand experience in overseas work, saw the untapped potential in our youth and skilled workers who dreamed of building better lives abroad but faced barriers like complex visas, mismatched skills, and lack of connections.</p>
+            <p>Starting small in Nairobi, we began by assisting a handful of clients with resume tweaks and job leads in the Middle East. Today, we've grown into a trusted agency that's placed over 500 individuals in roles across Canada, the UK, Dubai, Qatar, and Saudi Arabia. Our work isn't just about jobs—it's about transformation. We've helped families escape poverty, funded educations back home, and created success stories that inspire entire communities.</p>
+            <p>What sets us apart? Personalized guidance from start to finish, from training to placement. We're committed to ethical recruitment, ensuring fair wages and safe environments. As we look to the future, our mission remains: Unlocking doors for every Kenyan ready to step into a brighter tomorrow.</p>
+        </div>
+    </section>
 
-  <!-- ================= ABOUT CONTENT ================= -->
-  <section data-aos="fade-up">
-    <div class="container about-content">
-      <h2 data-aos="fade-right" data-aos-delay="100">Who We Are</h2>
-      <p data-aos="fade-right" data-aos-delay="200">
-        Afrilink Agency is a licensed recruitment agency based in Kenya.  
-        Our mission is to connect skilled and semi-skilled workers with
-        reputable employers across the globe. We specialize in secure,
-        transparent, and legal overseas job placements.
-      </p>
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Afrilink Agency. All rights reserved. | <a href="privacy.html">Privacy</a> | <a href="terms.html">Terms</a></p>
+            <p>Contact: +254707614590 | <a href="https://wa.me/254707614590">WhatsApp</a></p>
+        </div>
+    </footer>
 
-      <h3 data-aos="fade-right" data-aos-delay="300">Our Vision</h3>
-      <p data-aos="fade-right" data-aos-delay="400">
-        To become the most trusted gateway for Kenyan talent seeking
-        international career opportunities.
-      </p>
-
-      <h3 data-aos="fade-right" data-aos-delay="500">Our Values</h3>
-      <ul data-aos="fade-right" data-aos-delay="600">
-        <li><strong>Integrity:</strong> Honest and transparent processes.</li>
-        <li><strong>Safety:</strong> Verified employers and secure travel.</li>
-        <li><strong>Empowerment:</strong> Helping Kenyans achieve their dreams.</li>
-      </ul>
-
-      <div style="text-align:center; margin-top:20px;">
-        <a href="services.html" class="cta-btn" data-aos="zoom-in" data-aos-delay="700">See Our Services</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- ================= FOOTER ================= -->
-  <footer>
-    <p>&copy; 2025 Afrilink Agency. Kenya to the world, one career at a time.</p>
-  </footer>
-
-  <script src="script.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
