--- a/contact.html
+++ b/contact.html
@@ -1,80 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Contact Afrilink Agency to start your journey to global job opportunities.">
-  <title>Contact – Afrilink Agency</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>AOS.init({ duration: 800, once: true });</script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Afrilink Agency</title>
+    <meta name="description" content="Contact us for job inquiries, visa help, or general questions. Email, WhatsApp, or form.">
+    <meta name="keywords" content="contact Afrilink, Kenya agency contact">
+    <meta property="og:title" content="Contact - Afrilink Agency">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- ================= HEADER ================= -->
-  <header>
-    <div class="container">
-      <a href="index.html"><img src="images/afrilinklogo.jpg" alt="Afrilink Agency Logo" style="height:50px;" loading="lazy"></a>
-      <div class="menu-toggle">☰</div>
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="jobs.html">Jobs</a>
-        <a href="contact.html" class="cta-btn active">Contact Us</a>
-      </nav>
-    </div>
-  </header>
+    <header>
+        <nav class="container">
+            <div class="logo">
+                <img src="images/afrilinklogo.jpg" alt="Afrilink Agency Logo" loading="lazy">
+            </div>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="jobs.html">Jobs</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <!-- ================= HERO ================= -->
-  <section class="page-hero" style="background-image:url('images/jobhero1.jpg');">
-    <div class="hero-overlay" data-aos="fade-up">
-      <h1 data-aos="fade-up" data-aos-delay="200">Contact Us</h1>
-      <p data-aos="fade-up" data-aos-delay="400">Kenya to the world, one career at a time</p>
-      <a href="#contact-form" class="cta-btn" data-aos="zoom-in" data-aos-delay="600">Get in Touch</a>
-    </div>
-  </section>
-
-  <!-- ================= CONTACT INFO ================= -->
-  <section data-aos="fade-up">
-    <div class="container contact-info">
-      <div class="info-box" data-aos="fade-right" data-aos-delay="100">
-        <h2>Get in Touch</h2>
-        <p>Email: <a href="mailto:afreachcreatives@gmail.com">afreachcreatives@gmail.com</a></p>
-        <p>Phone: <a href="tel:+254707614590">+254 707 614 590</a></p>
-        <div class="social-icons">
-          <a href="javascript:alert('Coming Soon')" data-aos="zoom-in" data-aos-delay="200"><i class="fab fa-facebook-f"></i></a>
-          <a href="javascript:alert('Coming Soon')" data-aos="zoom-in" data-aos-delay="300"><i class="fab fa-twitter"></i></a>
-          <a href="javascript:alert('Coming Soon')" data-aos="zoom-in" data-aos-delay="400"><i class="fab fa-instagram"></i></a>
-          <a href="javascript:alert('Coming Soon')" data-aos="zoom-in" data-aos-delay="500"><i class="fab fa-linkedin-in"></i></a>
+    <section data-aos="fade-up">
+        <div class="container">
+            <h2>Get in Touch</h2>
+            <p style="text-align:center; margin-bottom:2rem;">Ready to start your journey? Fill the form or WhatsApp us.</p>
+            <div style="display:grid; grid-template-columns:1fr; gap:2rem; max-width:600px; margin:0 auto;">
+                <form action="https://formspree.io/f/mjkedvkg" method="POST">
+                    <input type="text" name="name" placeholder="Your Name" required>
+                    <input type="email" name="email" placeholder="Email Address" required>
+                    <input type="tel" name="phone" placeholder="Phone Number" required>
+                    <input type="text" name="_subject" placeholder="Subject" required>
+                    <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+                    <button type="submit" class="btn">Send Message</button>
+                </form>
+                <div style="text-align:center;">
+                    <p>Or call: <strong>+254707614590</strong></p>
+                    <a href="https://wa.me/254707614590?text=Hi Afrilink, I have a general inquiry" class="whatsapp-btn">Message on WhatsApp</a>
+                </div>
+            </div>
         </div>
-      </div>
+    </section>
 
-      <div class="form-box" id="contact-form" data-aos="fade-right" data-aos-delay="200">
-        <h2>Send Us a Message</h2>
-        <form action="https://formspree.io/f/mjkedvkg" method="POST">
-          <label for="name">Full Name</label>
-          <input type="text" id="name" name="name" placeholder="Full Name" required>
-          <label for="email">Email Address</label>
-          <input type="email" id="email" name="email" placeholder="Email Address" required>
-          <label for="phone">Phone Number</label>
-          <input type="text" id="phone" name="phone" placeholder="Phone Number" required>
-          <label for="message">Your Message</label>
-          <textarea id="message" name="message" rows="5" placeholder="Tell us how we can assist you..." required></textarea>
-          <label for="cv">Upload CV (PDF)</label>
-          <input type="file" id="cv" name="cv" accept=".pdf">
-          <button type="submit" class="cta-btn" data-aos="zoom-in" data-aos-delay="300">Submit Message</button>
-        </form>
-      </div>
-    </div>
-  </section>
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Afrilink Agency. All rights reserved. | <a href="privacy.html">Privacy</a> | <a href="terms.html">Terms</a></p>
+            <p>Contact: +254707614590 | <a href="https://wa.me/254707614590">WhatsApp</a></p>
+        </div>
+    </footer>
 
-  <!-- ================= FOOTER ================= -->
-  <footer>
-    <p>&copy; 2024 Afrilink Agency. Kenya to the world, one career at a time.</p>
-  </footer>
-
-  <script src="script.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
