--- a/terms.html
+++ b/terms.html
@@ -4,50 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Service - Afrilink Agency</title>
+    <meta name="description" content="Afrilink Agency's terms of service for using our website and job placement services.">
+    <meta name="keywords" content="terms of service, Afrilink Agency, job placement terms">
+    <meta property="og:title" content="Terms of Service - Afrilink Agency">
+    <meta property="og:description" content="Understand the terms for using our services.">
+    <meta property="og:image" content="images/afrilinklogo.jpg">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav class="container">
-            <div class="logo">
-                <img src="images/afrilinklogo.jpg" alt="Afrilink Agency Logo" loading="lazy">
-            </div>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="jobs.html">Jobs</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section style="padding:5rem 0;">
+    <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <h2>Terms of Service</h2>
-            <p><strong>Last Updated: September 25, 2025</strong></p>
-            <p>By using Afrilink Agency's website and services, you agree to these Terms. If you do not agree, please do not use our site.</p>
-            <h3>Use of Site</h3>
-            <p>You may use our site for lawful purposes only. You are responsible for your submissions and must not infringe on others' rights.</p>
-            <h3>Services</h3>
-            <p>Job placements and assistance are provided on a best-effort basis. We do not guarantee job offers or visa approvals. Fees, if any, are outlined separately.</p>
-            <h3>Liability</h3>
-            <p>We are not liable for any indirect damages arising from use of our services. Services are provided "as is."</p>
-            <h3>Intellectual Property</h3>
-            <p>All content on this site is owned by Afrilink Agency. You may not reproduce it without permission.</p>
-            <h3>Governing Law</h3>
-            <p>These terms are governed by Kenyan law.</p>
-            <h3>Changes</h3>
-            <p>We may update these terms; continued use constitutes acceptance.</p>
-            <p>For questions, email samuelchei2015@gmail.com.</p>
+            <a class="navbar-brand" href="index.html"><img src="images/afrilinklogo.jpg" alt="Afrilink Agency Logo" loading="lazy"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="jobs.html">Jobs</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="privacy.html">Privacy</a></li>
+                    <li class="nav-item"><a class="nav-link" href="terms.html">Terms</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <section class="section-padding">
+        <div class="container">
+            <h2 class="text-center mb-5" data-aos="fade-up">Terms of Service</h2>
+            <div data-aos="fade-up">
+                <p><strong>Last Updated: September 25, 2025</strong></p>
+                <p>By using Afrilink Agency’s website and services, you agree to these terms.</p>
+                <h3>Use of Services</h3>
+                <p>Our job placement and support services are provided on a best-effort basis. We do not guarantee job offers or visa approvals.</p>
+                <h3>Client Responsibilities</h3>
+                <p>You must provide accurate information and comply with all applicable laws. Misrepresentation may result in service termination.</p>
+                <h3>Liability</h3>
+                <p>We are not liable for damages arising from service use. Services are provided “as is.”</p>
+                <h3>Governing Law</h3>
+                <p>These terms are governed by Kenyan law.</p>
+                <h3>Contact Us</h3>
+                <p>For questions, reach us at samuelchei2015@gmail.com or +254707614590.</p>
+            </div>
         </div>
     </section>
 
-    <footer>
+    <footer class="text-center">
         <div class="container">
             <p>&copy; 2025 Afrilink Agency. All rights reserved. | <a href="privacy.html">Privacy</a> | <a href="terms.html">Terms</a></p>
+            <p>Contact: +254707614590 | <a href="https://wa.me/254707614590">WhatsApp</a></p>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
