--- a/privacy.html
+++ b/privacy.html
@@ -4,50 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - Afrilink Agency</title>
+    <meta name="description" content="Afrilink Agency's privacy policy. We protect your personal information.">
+    <meta name="keywords" content="privacy policy, Afrilink Agency, data protection">
+    <meta property="og:title" content="Privacy Policy - Afrilink Agency">
+    <meta property="og:description" content="Learn how we protect your data.">
+    <meta property="og:image" content="images/afrilinklogo.jpg">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav class="container">
-            <div class="logo">
-                <img src="images/afrilinklogo.jpg" alt="Afrilink Agency Logo" loading="lazy">
-            </div>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="jobs.html">Jobs</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section style="padding:5rem 0;">
+    <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <h2>Privacy Policy</h2>
-            <p><strong>Last Updated: September 25, 2025</strong></p>
-            <p>At Afrilink Agency, we respect your privacy and are committed to protecting your personal information. This Privacy Policy explains how we collect, use, and safeguard your data when you visit our website or use our services.</p>
-            <h3>Information We Collect</h3>
-            <p>We collect personal information you provide, such as name, email, phone, and messages via forms. We also collect non-personal data like IP addresses and browser types for analytics.</p>
-            <h3>How We Use Your Information</h3>
-            <p>Your data is used to respond to inquiries, process job applications, and improve services. We do not sell or share your data with third parties except as required for placements (e.g., employers) or by law.</p>
-            <h3>Cookies and Tracking</h3>
-            <p>We use essential cookies for site functionality. You can manage cookies via your browser settings.</p>
-            <h3>Data Security</h3>
-            <p>We implement reasonable security measures to protect your data, but no system is fully secure.</p>
-            <h3>Your Rights</h3>
-            <p>You can request access, correction, or deletion of your data by contacting us at samuelchei2015@gmail.com.</p>
-            <h3>Changes to This Policy</h3>
-            <p>We may update this policy; check back periodically.</p>
-            <p>For questions, email samuelchei2015@gmail.com.</p>
+            <a class="navbar-brand" href="index.html"><img src="images/afrilinklogo.jpg" alt="Afrilink Agency Logo" loading="lazy"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="jobs.html">Jobs</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="privacy.html">Privacy</a></li>
+                    <li class="nav-item"><a class="nav-link" href="terms.html">Terms</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <section class="section-padding">
+        <div class="container">
+            <h2 class="text-center mb-5" data-aos="fade-up">Privacy Policy</h2>
+            <div data-aos="fade-up">
+                <p><strong>Last Updated: September 25, 2025</strong></p>
+                <p>At Afrilink Agency, we are committed to protecting your privacy. This policy outlines how we collect, use, and safeguard your data.</p>
+                <h3>Information We Collect</h3>
+                <p>We collect personal information (name, email, phone) via forms for job inquiries and general contact. Non-personal data (e.g., IP addresses) may be collected for analytics.</p>
+                <h3>How We Use Your Information</h3>
+                <p>Your data is used to process job applications, respond to inquiries, and improve our services. We share data only with verified employers for placements or as required by law.</p>
+                <h3>Data Security</h3>
+                <p>We use reasonable measures to protect your data, compliant with Kenya’s Data Protection Act 2019, but no system is fully secure.</p>
+                <h3>Your Rights</h3>
+                <p>You can request access, correction, or deletion of your data by emailing samuelchei2015@gmail.com.</p>
+                <h3>Contact Us</h3>
+                <p>For questions, reach us at samuelchei2015@gmail.com or +254707614590.</p>
+            </div>
         </div>
     </section>
 
-    <footer>
+    <footer class="text-center">
         <div class="container">
             <p>&copy; 2025 Afrilink Agency. All rights reserved. | <a href="privacy.html">Privacy</a> | <a href="terms.html">Terms</a></p>
+            <p>Contact: +254707614590 | <a href="https://wa.me/254707614590">WhatsApp</a></p>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
