--- a/contact.html
+++ b/contact.html
@@ -4,57 +4,127 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Afrilink Agency</title>
-    <meta name="description" content="Contact us for job inquiries, visa help, or general questions. Email, WhatsApp, or form.">
-    <meta name="keywords" content="contact Afrilink, Kenya agency contact">
+    <meta name="description" content="Contact Afrilink Agency for job inquiries or general questions via form, email, or WhatsApp: +254707614590.">
+    <meta name="keywords" content="contact Afrilink, Kenya agency, job inquiries">
     <meta property="og:title" content="Contact - Afrilink Agency">
+    <meta property="og:description" content="Get in touch for your international career.">
+    <meta property="og:image" content="images/afrilinklogo.jpg">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav class="container">
-            <div class="logo">
-                <img src="images/afrilinklogo.jpg" alt="Afrilink Agency Logo" loading="lazy">
-            </div>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="jobs.html">Jobs</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section data-aos="fade-up">
+    <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <h2>Get in Touch</h2>
-            <p style="text-align:center; margin-bottom:2rem;">Ready to start your journey? Fill the form or WhatsApp us.</p>
-            <div style="display:grid; grid-template-columns:1fr; gap:2rem; max-width:600px; margin:0 auto;">
-                <form action="https://formspree.io/f/mjkedvkg" method="POST">
-                    <input type="text" name="name" placeholder="Your Name" required>
-                    <input type="email" name="email" placeholder="Email Address" required>
-                    <input type="tel" name="phone" placeholder="Phone Number" required>
-                    <input type="text" name="_subject" placeholder="Subject" required>
-                    <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
-                    <button type="submit" class="btn">Send Message</button>
-                </form>
-                <div style="text-align:center;">
-                    <p>Or call: <strong>+254707614590</strong></p>
-                    <a href="https://wa.me/254707614590?text=Hi Afrilink, I have a general inquiry" class="whatsapp-btn">Message on WhatsApp</a>
+            <a class="navbar-brand" href="index.html"><img src="images/afrilinklogo.jpg" alt="Afrilink Agency Logo" loading="lazy"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="jobs.html">Jobs</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="privacy.html">Privacy</a></li>
+                    <li class="nav-item"><a class="nav-link" href="terms.html">Terms</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <section class="section-padding">
+        <div class="contact-hero" data-aos="fade-up">
+            <img src="images/contact.jpg" class="img-fluid" alt="Contact Afrilink" loading="lazy">
+            <div class="contact-overlay">
+                <button class="btn btn-explore" data-bs-toggle="modal" data-bs-target="#contactFormModal">Get In Touch</button>
+            </div>
+        </div>
+        <div class="container">
+            <h2 class="text-center mb-5" data-aos="fade-up">Contact Us</h2>
+            <div class="row">
+                <div class="col-md-6" data-aos="fade-right">
+                    <h5>Contact Information</h5>
+                    <p>Phone/WhatsApp: +254707614590</p>
+                    <p>Email: samuelchei2015@gmail.com</p>
+                    <a href="https://wa.me/254707614590?text=Hi Afrilink, I have a question" class="btn btn-success mb-3">Message on WhatsApp</a>
+                </div>
+                <div class="col-md-6" data-aos="fade-left">
+                    <form action="https://formspree.io/f/mjkedvkg" method="POST">
+                        <input type="hidden" name="_subject" value="Contact Inquiry">
+                        <input type="hidden" name="_next" value="/thankyou.html">
+                        <div class="mb-3">
+                            <label for="cname" class="form-label">Name</label>
+                            <input type="text" class="form-control" id="cname" name="name" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="cphone" class="form-label">Phone</label>
+                            <input type="tel" class="form-control" id="cphone" name="phone" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="cemail" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="cemail" name="email" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="cmessage" class="form-label">Message</label>
+                            <textarea class="form-control" id="cmessage" name="message" rows="5" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-explore">Send Message</button>
+                    </form>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer>
+    <!-- Contact Form Modal -->
+    <div class="modal fade" id="contactFormModal" tabindex="-1" aria-labelledby="contactFormModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="contactFormModalLabel">Get In Touch</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form action="https://formspree.io/f/mjkedvkg" method="POST">
+                        <input type="hidden" name="_subject" value="Contact Inquiry">
+                        <input type="hidden" name="_next" value="/thankyou.html">
+                        <div class="mb-3">
+                            <label for="cname2" class="form-label">Name</label>
+                            <input type="text" class="form-control" id="cname2" name="name" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="cphone2" class="form-label">Phone</label>
+                            <input type="tel" class="form-control" id="cphone2" name="phone" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="cemail2" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="cemail2" name="email" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="cmessage2" class="form-label">Message</label>
+                            <textarea class="form-control" id="cmessage2" name="message" rows="3" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-explore">Send Inquiry</button>
+                    </form>
+                    <div class="mt-3">
+                        <a href="https://wa.me/254707614590?text=Hi Afrilink, I have a question" class="btn btn-success">Or Message on WhatsApp</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer class="text-center">
         <div class="container">
             <p>&copy; 2025 Afrilink Agency. All rights reserved. | <a href="privacy.html">Privacy</a> | <a href="terms.html">Terms</a></p>
             <p>Contact: +254707614590 | <a href="https://wa.me/254707614590">WhatsApp</a></p>
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="script.js"></script>
 </body>
