--- a/about.html
+++ b/about.html
@@ -4,47 +4,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Afrilink Agency</title>
-    <meta name="description" content="Learn about Afrilink Agency, founded in 2020 to help Kenyans find jobs abroad. Our story, mission, and impact.">
-    <meta name="keywords" content="about Afrilink, Kenya abroad jobs, agency story">
+    <meta name="description" content="Learn about Afrilink Agency, founded in 2020 to connect Kenyan talent with global job opportunities.">
+    <meta name="keywords" content="about Afrilink, Kenya jobs abroad, agency mission">
     <meta property="og:title" content="About Afrilink Agency">
+    <meta property="og:description" content="Empowering Kenyans through international job placements.">
+    <meta property="og:image" content="images/afrilinklogo.jpg">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
-    <header>
-        <nav class="container">
-            <div class="logo">
-                <img src="images/afrilinklogo.jpg" alt="Afrilink Agency Logo" loading="lazy">
-            </div>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="jobs.html">Jobs</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section data-aos="fade-up">
+    <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <h2>Our Story</h2>
-            <img src="images/jobabout.jpg" alt="Afrilink Agency Team" loading="lazy" style="width:100%; border-radius:10px; margin-bottom:2rem;">
-            <p>Founded in 2020 amid the global challenges of the pandemic, Afrilink Agency was born from a simple yet powerful vision: to bridge the gap between talented Kenyans and international job opportunities. Our founder, a Kenyan entrepreneur with firsthand experience in overseas work, saw the untapped potential in our youth and skilled workers who dreamed of building better lives abroad but faced barriers like complex visas, mismatched skills, and lack of connections.</p>
-            <p>Starting small in Nairobi, we began by assisting a handful of clients with resume tweaks and job leads in the Middle East. Today, we've grown into a trusted agency that's placed over 500 individuals in roles across Canada, the UK, Dubai, Qatar, and Saudi Arabia. Our work isn't just about jobs—it's about transformation. We've helped families escape poverty, funded educations back home, and created success stories that inspire entire communities.</p>
-            <p>What sets us apart? Personalized guidance from start to finish, from training to placement. We're committed to ethical recruitment, ensuring fair wages and safe environments. As we look to the future, our mission remains: Unlocking doors for every Kenyan ready to step into a brighter tomorrow.</p>
+            <a class="navbar-brand" href="index.html"><img src="images/afrilinklogo.jpg" alt="Afrilink Agency Logo" loading="lazy"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="jobs.html">Jobs</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="privacy.html">Privacy</a></li>
+                    <li class="nav-item"><a class="nav-link" href="terms.html">Terms</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <section class="section-padding">
+        <div class="container">
+            <h2 class="text-center mb-5" data-aos="fade-up">About Afrilink Agency</h2>
+            <div class="row mb-5" data-aos="fade-up" data-aos-delay="100">
+                <div class="col-md-6">
+                    <img src="images/jobabout.jpg" class="img-fluid rounded" alt="Afrilink Agency Team" loading="lazy">
+                </div>
+                <div class="col-md-6">
+                    <h3>About Us</h3>
+                    <p>Founded in 2020 in Nairobi, Afrilink Agency emerged during a time of global uncertainty to connect Kenyan talent with life-changing job opportunities abroad. Starting with a small team passionate about empowering youth, we’ve grown to place over 500 individuals in roles across Canada, UK, Dubai, Qatar, and Saudi Arabia. Our personalized approach ensures every client receives tailored support, from resume crafting to visa processing, transforming lives and communities.</p>
+                </div>
+            </div>
+            <div class="row mb-5" data-aos="fade-up" data-aos-delay="200">
+                <div class="col-md-6 order-md-2">
+                    <i class="fas fa-bullseye fa-3x mb-3" style="color:#007BFF;"></i>
+                    <h3>Our Mission</h3>
+                    <p>We are dedicated to empowering Kenyans by providing ethical, transparent job placement services. Our mission is to break down barriers—be it visas, skills, or connections—ensuring every client finds a safe, rewarding job abroad that supports their dreams and families back home.</p>
+                </div>
+                <div class="col-md-6 order-md-1">
+                    <img src="images/jobabout.jpg" class="img-fluid rounded" alt="Our Mission" loading="lazy">
+                </div>
+            </div>
+            <div class="row" data-aos="fade-up" data-aos-delay="300">
+                <div class="col-md-6">
+                    <i class="fas fa-eye fa-3x mb-3" style="color:#007BFF;"></i>
+                    <h3>Our Vision</h3>
+                    <p>We envision a future where Afrilink Agency transforms the lives of 1,000+ Kenyans by 2030, expanding our reach to new countries and industries. We aim to be the leading agency for international job placements, known for integrity, excellence, and life-changing impact.</p>
+                </div>
+                <div class="col-md-6">
+                    <img src="images/jobabout.jpg" class="img-fluid rounded" alt="Our Vision" loading="lazy">
+                </div>
+            </div>
         </div>
     </section>
 
-    <footer>
+    <footer class="text-center">
         <div class="container">
             <p>&copy; 2025 Afrilink Agency. All rights reserved. | <a href="privacy.html">Privacy</a> | <a href="terms.html">Terms</a></p>
             <p>Contact: +254707614590 | <a href="https://wa.me/254707614590">WhatsApp</a></p>
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
