--- a/terms.html
+++ b/terms.html
@@ -41,13 +41,13 @@
             <h2 class="text-center mb-5" data-aos="fade-up">Terms of Service</h2>
             <div data-aos="fade-up">
                 <p><strong>Last Updated: September 25, 2025</strong></p>
-                <p>By using Afrilink Agency’s website and services, you agree to these terms.</p>
+                <p>By using Afrilink Agency's website and services, you agree to these terms.</p>
                 <h3>Use of Services</h3>
                 <p>Our job placement and support services are provided on a best-effort basis. We do not guarantee job offers or visa approvals.</p>
                 <h3>Client Responsibilities</h3>
                 <p>You must provide accurate information and comply with all applicable laws. Misrepresentation may result in service termination.</p>
                 <h3>Liability</h3>
-                <p>We are not liable for damages arising from service use. Services are provided “as is.”</p>
+                <p>We are not liable for damages arising from service use. Services are provided "as is."</p>
                 <h3>Governing Law</h3>
                 <p>These terms are governed by Kenyan law.</p>
                 <h3>Contact Us</h3>
