--- a/terms.html
+++ b/terms.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service - Afrilink Agency</title>
-    <meta name="description" content="Afrilink Agency's terms of service for using our website and job placement services.">
-    <meta name="keywords" content="terms of service, Afrilink Agency, job placement terms">
-    <meta property="og:title" content="Terms of Service - Afrilink Agency">
-    <meta property="og:description" content="Understand the terms for using our services.">
+    <title>Thank You - Afrilink Agency</title>
+    <meta name="description" content="Thank you for contacting Afrilink Agency. We'll respond soon.">
+    <meta name="keywords" content="thank you, Afrilink Agency, contact confirmation">
+    <meta property="og:title" content="Thank You - Afrilink Agency">
+    <meta property="og:description" content="Your inquiry has been received.">
     <meta property="og:image" content="images/afrilinklogo.jpg">
     <link rel="icon" type="image/png" href="images/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
@@ -36,23 +36,11 @@
         </div>
     </nav>
 
-    <section class="section-padding">
+    <section class="section-padding text-center">
         <div class="container">
-            <h2 class="text-center mb-5" data-aos="fade-up">Terms of Service</h2>
-            <div data-aos="fade-up">
-                <p><strong>Last Updated: September 25, 2025</strong></p>
-                <p>By using Afrilink Agency's website and services, you agree to these terms.</p>
-                <h3>Use of Services</h3>
-                <p>Our job placement and support services are provided on a best-effort basis. We do not guarantee job offers or visa approvals.</p>
-                <h3>Client Responsibilities</h3>
-                <p>You must provide accurate information and comply with all applicable laws. Misrepresentation may result in service termination.</p>
-                <h3>Liability</h3>
-                <p>We are not liable for damages arising from service use. Services are provided "as is."</p>
-                <h3>Governing Law</h3>
-                <p>These terms are governed by Kenyan law.</p>
-                <h3>Contact Us</h3>
-                <p>For questions, reach us at samuelchei2015@gmail.com or +254707614590.</p>
-            </div>
+            <h2 data-aos="fade-up">Thank You!</h2>
+            <p data-aos="fade-up" data-aos-delay="100">Your inquiry has been received. We'll respond soon via email or WhatsApp.</p>
+            <a href="index.html" class="btn btn-explore" data-aos="fade-up" data-aos-delay="200">Return to Home</a>
         </div>
     </section>
 
